--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 .tituloprincipal {
-            background: linear-gradient(to right, #FF4500, #FF8C00); /* Degradado naranja */
+            background: linear-gradient(180deg, #0d3b66, #3d85c6); /* Degradado */
       color: #191970; /* Texto blanco para que resalte */
 
 font-size: 45px;
