--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,5 @@
 .tituloprincipal {
-           background: 
-  linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
-  linear-gradient(135deg, #1abc9c, #3498db);
+          background: linear-gradient(135deg, #002147, #0a3d62);
       color: #191970; /* Texto blanco para que resalte */
 
 font-size: 45px;
