--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 .tituloprincipal {
           background: linear-gradient(135deg, #002147, #0a3d62);
-      color: #191970; /* Texto blanco para que resalte */
+      color: #191970; /* Texto resalte */
 
 font-size: 45px;
 font-weight: 900;
