--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 .tituloprincipal {
-          background: linear-gradient(135deg, #002147, #0a3d62);
+          background: linear-gradient(135deg,  #005aab, #74b9ff);
       color: #191970; /* Texto resalte */
 
 font-size: 45px;
