--- a/estilos.css
+++ b/estilos.css
@@ -1,8 +1,6 @@
 .tituloprincipal {
-          background: 
-  linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-  linear-gradient(135deg, #002147, #3498db);
-      color: #191970; /* Texto resalte */
+         background: linear-gradient(135deg, #002147, #2980b9);
+      color: #FFFFFF; /* Texto resalte */
 
 font-size: 45px;
 font-weight: 900;
