--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 .tituloprincipal {
     background: linear-gradient(135deg, #002147, #2980b9);
-      color: white; /* Texto resalte */
+      color: #FFFFFF; /* Texto resalte */
       text-align: center;
 font-size: 45px;
 font-weight: 900;
