--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 .tituloprincipal {
-    background: linear-gradient(135deg, #002147, #2980b9);
+    background: linear-gradient(135deg, #74b9ff, #ffffff);
       color: #FFFFFF; /* Texto resalte */
       text-align: center;
 font-size: 45px;
