--- a/estilos.css
+++ b/estilos.css
@@ -24,21 +24,21 @@ color: #000000;
 text-align:center;
 }
 .texto3 {
-color: #FFFFE0;
+color: #FFFFFF;
 text-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
 text-align:center;
 }
 .texto4 {
 font-size: 20px;
 font-weight: 650;
-  color: #FFFFE0;
+  color: #FFFFFF;
 text-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
 text-align:center;
 }
 .texto5 {
 font-size: 20px;
 font-weight: 650;
-  color: #FFFFE0;
+  color: #FFFFFF;
 text-shadow: 2px 4px 5px rgba(0, 0, 0, 0.3);
 text-align:center;
 }
