--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 .tituloprincipal {
-    background: linear-gradient(135deg, #74b9ff, #ffffff);
+    background: (135deg, #74b9ff, #ffffff);
       color: #FFFFFF; /* Texto resalte */
 font-size: 45px;
 font-weight: 900;
